--- a/src/styles/cell.css
+++ b/src/styles/cell.css
@@ -1,6 +1,54 @@
 .cell {
-    width: 35px;
-    height: 35px;
-    outline: 1px solid rgb(134, 154, 189);
-    display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #9fd6ff;
+  box-sizing: border-box;
+}
+
+.start {
+  background-image: url('/public/images/start-pin.svg');
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+
+.end {
+  background-image: url('/public/images/end-pin.svg');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  /* animation: pulse-animation 2s infinite; */
+}
+
+.visited {
+  background: #034078; /* need var */
+  border: none;
+}
+
+.unvisited {
+  background: transparent;
+}
+
+.wall {
+  background: #0a2b38;
+  border: none;
+}
+
+.target {
+  background-image: url('/public/images/target.svg');
+  background-repeat: no-repeat;
+  background-position: 50% 35%;
+  /* animation: pulse-animation 2s infinite; */
+}
+
+.shortest-path {
+  background: #ad0000;
+  border: none;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(153, 255, 153, 1);
   }
+  100% {
+    box-shadow: 0 0 100px 15px rgba(153, 255, 153, 0);
+  }
+}
