--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -27,3 +27,9 @@ button {
   width: 100vw;
   overflow: hidden;
 }
+
+#footer {
+  height: 20%;
+  width: 100%;
+  background: #034078; /* need var */
+}
